--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,10 +2,17 @@
 {% block content %}
 {% for post in posts %}                                                                                                                                                             
     <div class="post">
-        <h1><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-        <p>published: {{ post.published_date }}</p>
-        <p>{{ post.text|truncatechars:400|linebreaks }}</p>
-        <!--<p>{{ post.text|linebreaks }}</p>-->
+        <h2><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+{#        <div class="info">发布日期: {{ post.published_date }}</div>#}
+        <div class="info">
+			<span class="date">2014年11月14日</span>
+			<span class="author">熊能</span>
+            <span class="editpost"><a class="post-edit-link" href="#">编辑</a></span>
+            <span class="comments"><a href="#" title="查看文章评论">没有评论</a></span>
+            <span class="comments"> 8 人阅读&nbsp;&nbsp;</span>
+			<div class="fixed"></div>
+		</div>
+        <div class="content"><p>{{ post.text|truncatechars:400|linebreaks }}</p></div>
     </div>
 {% endfor %}
 {% endblock content %}
