--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -34,7 +34,7 @@
 </div>
 <div class="row">
     <div class="col-md-1"></div>
-    <div class="col-md-7">
+    <div class="col-md-7" style="padding-right:18px;">
         {% block content %}
         {% endblock %}
     </div>
