静态文件本地化，继续完善标签，评论和分类等功能！

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -26,5 +26,15 @@
             <div class="fixed"></div>
         </div>
         <div class="content"><p>{{ post.text|linebreaks }}</p></div>
+        <div class="under">
+            <span class="categories">分类: </span>
+            <span><a href="#" rel="category tag">{{ post.category.name }}</a></span>
+            <span class="tags">标签: </span>
+            <span>
+                {% for tg in post.tags.all %}
+                    <a href="#" rel="tag">{{ tg.name }}</a>&nbsp;
+                {% endfor %}
+            </span>
+        </div>
     </div>
 {% endblock %}
