--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -4,11 +4,25 @@
     {% for post in posts %}
         <div class="post">
             <h2><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+
             <div class="info">
                 <span class="date">创建时间: {{ post.created_date|date:'Y年m月d日' }}</span>
+
                 <div class="fixed"></div>
             </div>
-            <div class="content"><p>{{ post.text|truncatechars:300|linebreaks }}</p></div>
+            <div class="content">
+                <p>{{ post.text|truncatechars:300|linebreaks }}</p>
+            </div>
+            <div class="under">
+                <span class="categories">分类: </span>
+                <span><a href="#" rel="category tag">{{ post.category.name }}</a></span>
+                <span class="tags">标签: </span>
+                <span>
+                    {% for tg in post.tags.all %}
+                        <a href="#" rel="tag">{{ tg.name }}</a>&nbsp;
+                    {% endfor %}
+                </span>
+            </div>
         </div>
     {% endfor %}
 {% endblock %}
