--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,33 @@
 {% extends 'mysite/base.html' %}
 {% block content %}
-{% for post in posts %}                                                                                                                                                             
-    <div class="post">
-        <h2><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-        <div class="info">
-			<span class="date">{{ post.published_date|date:'Y年m月d日' }}</span>
+    {% for post in posts %}
+        <div class="post">
+            <h2><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+
+            <div class="info">
+                <span class="date">{{ post.published_date|date:'Y年m月d日' }}</span>
             <span class="comments">
                 <a href="#" title="查看文章评论">没有评论</a>
             </span>
             <span class="comments">
                 {{ post.click }} 人阅读&nbsp;&nbsp;
             </span>
-			<div class="fixed"></div>
-		</div>
-        <div class="content">
-            <p>{{ post.text|truncatechars:300|linebreaks }}</p>
+
+                <div class="fixed"></div>
+            </div>
+            <div class="content">
+                <p>{{ post.text|truncatechars:300|linebreaks }}</p>
+            </div>
+            <div class="under">
+                <span class="categories">分类: </span>
+                <span><a href="#" rel="category tag">{{ post.category.name }}</a></span>
+                <span class="tags">标签: </span>
+                <span>
+                    {% for tg in post.tags.all %}
+                        <a href="#" rel="tag">{{ tg.name }}</a>&nbsp;
+                    {% endfor %}
+                </span>
+            </div>
         </div>
-    </div>
-{% endfor %}
+    {% endfor %}
 {% endblock content %}
