--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -2,16 +2,15 @@
 <html>
 <head>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- Optional theme -->
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
+    <!-- Blog CSS-->
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     <!-- Latest compiled and minified JavaScript -->
     <script src="{% static 'js/jquery-1.11.1.min.js' %}"></script>
     <script src="{% static 'js/base.js' %}"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <title>Simple Blog</title>
 </head>
 <body class="customize-support">
