--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,7 +9,11 @@
             <div class="info">
                 <span class="date">{{ post.published_date|date:'Y年m月d日' }}</span>
             <span class="comments">
-                <a href="#" title="查看文章评论">没有评论</a>
+                {% if post.num_comment > 0 %}
+                    {{ post.num_comment }} 条评论
+                {% else %}
+                    没有评论
+                {% endif %}
             </span>
             <span class="comments">
                 {{ post.click }} 人阅读&nbsp;&nbsp;
